--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,9 @@
 {
     "parser": "babel-eslint",
+    "env": {
+        "browser": true,
+        "node": true
+    },
     "extends": [
         "standard",
         "plugin:flowtype/recommended"
